08:00 - 11:00 - desktop navigation fixes.  new webinar components astro + scss  navigation aligned with figma  TODO:  mobile nav  desktop nav hover states  general snagging

--- a/src/styles/components/category-badges.scss
+++ b/src/styles/components/category-badges.scss
@@ -7,6 +7,9 @@
   flex-grow: 1;
   ul {
     list-style: none;
+    @media (max-width: 1200px) {
+      margin-left: 0;
+    }
     > li {
       @include mix.special-text;
       margin: 5px;
@@ -26,4 +29,7 @@
 }
 .wrapper:has(.category-badges-wrapper) {
   margin-top: 0;
+  @media (max-width: 1200px) {
+    margin-top: 8px;
+  }
 }
